# steerable-scene-generation

./: README.md  pyproject.toml
scripts/: export_sdformat.py  extract_blender_image_masks.py  render_blender.py
