[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steerable_scene_generation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Nicholas Pfaff", email = "nepfaff@mit.edu" }]

# NOTE: This repo lives inside a uv workspace (see root `pyproject.toml`).
# Avoid overly-tight pins that conflict with the workspace-level CUDA / torch stack.
dependencies = [
  "torch>=2.3,<3",
  # loosened from Poetry's ^0.18.0 (<0.19) which conflicts with your root torch/torchvision pins
  "torchvision>=0.18",
  "diffusers>=0.33.1",
  "tqdm>=4.66.4",
  "numpy>=1.26.4,<3",
  "drake>=1.28.0",
  "wandb>=0.17.0",
  "hydra-core>=1.3.2",
  "ipython>=8.24.0",
  # removed py310/cu118 wheel URL; let the workspace control the pytorch3d build/index selection
  "pytorch3d",
  "colorama>=0.4.6",
  "opencv-python>=4.9.0.80",
  "matplotlib>=3.8.4",
  "lightning>=2.2.4",
  "click>=8.1.7",
  "imageio>=2.34.1",
  "einops>=0.8.0",
  "wandb-osh>=1.2.2",
  "pyyaml>=6.0.1",
  "trimesh<4.2.0",
  "pyvirtualdisplay>=3.0",
  "roma>=1.5.0",
  "clean-fid>=0.1.35",
  # "cmmd-pytorch @ git+https://github.com/nepfaff/cmmd-pytorch.git@5b17226d4d8aaf827a2d655b3b6a186f041b356f",
  "prdc>=0.2",
  "top-pr>=0.2.1",
  "datasets>=3.1.0",
  "sentencepiece>=0.2.0",
  "openai>=1.59.9",
  "graphviz>=0.20.3",
  "huggingface-hub>=0.32.2",
]

# [dependency-groups]
# dev = [
#   "pre-commit>=3.4.0",
#   "black==23.9.1",
#   "isort==5.12.0",
# ]

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['steerable_scene_generation']
known_third_party = ['wandb']
